welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:58: error: not found: value jardniere
	jardniere();
        ^